# cooperative-systems-theory

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
data/inputs/: theory.md
docs/: index.md
docs/cst/: figures.md  math.md  simulation.md  theory.md
examples/: params.coop.yaml  params.extractive.yaml
scripts/: debug_cli.py  make_figures.py  print_help.py  run_cli_test.py
src/cst/: cli.py  utils.py
