[project]
name = "cst"
version = "0.0.1"
description = "Cooperative Systems Theory: skeleton"
authors = [{ name = "InterCooperative Network" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-jupyter>=0.24",
  "pymdown-extensions>=10.8"
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "pre-commit>=3.7"
]

[project.scripts]
cst = "cst.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = []
